done half of it or smth

--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -15,5 +15,6 @@ $color-primary: #302d32;
 $color-secondary: #827686;
 $color-filter: #d6d5d6;
 $color-roller: #c0c0c1;
+$color-range: #565458;
 $bg-color: #ffffff;
 
