--- a/src/views/index.html
+++ b/src/views/index.html
@@ -26,6 +26,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <link href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" rel="stylesheet"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="styles/main.css">
     </head>
@@ -73,12 +74,12 @@
 
                     <div class="filter-slide">
                         <div class="slidecontainer">
-                            <input type="range" min="0" max="1000" value="120" class="firstSlider" id="myRange">
-                            <p><span id="demo"></span></p>
+                            <input type="range" min="0" max="1000" value="120" class="firstSlider" id="myRange1">
+                            <p><span id="demo1"></span></p>
                         </div>
                         <div class="slidecontainer">
-                            <input type="range" min="0" max="98000" value="10350" class="secondSlider" id="myRange">
-                            <p><span id="demo"></span></p>
+                            <input type="range" min="0" max="98000" value="10350" class="secondSlider" id="myRange2">
+                            <p><span id="demo2"></span></p>
                         </div>
                     </div>
                     
@@ -92,29 +93,57 @@
             <section class="section-country">
                 <div class="wrapper">
                         <h2 class="title">Загородные дома</h2>
-                        <p>Наши дома расположились в уютных районах Екатеринбурга: Верх-Исетский район, Железнодорожный район, Чкаловский район.</p>
-                    <input class="section-country__input" type="range" id="range" min="1" value="1" step="1" />
-                    <div id="slider">
-                        <div class="slide">
-                            <div class="slider-child slider-cowberry">
+                        <p class="section-country__despription">Наши дома расположились в уютных районах Екатеринбурга:<br>Верх-Исетский район, Железнодорожный район, Чкаловский район.</p>
+                        <div class="content">
+                            <div class="progress" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="slider">
+                                <div class="slide">
+                                    <div class="slider-child slider-cowberry"></div>
+                                    <div class="slider-item"></div>
+                                </div>
+                                <div class="slide">
+                                    <div class="slider-child slider-trand"></div>
+                                    <div class="slider-item"></div>
+                                </div>
+                                <div class="slide">
+                                    <div class="slider-child slider-panorama"></div>
+                                    <div class="slider-item"></div>
+                                </div>
+                                <span class="slider__label sr-only"></span>
                             </div>
-                            <div class="slider-item"></div>
-                        </div>
-                        <div class="slide">
-                            <div class="slider-child slider-trand"></div>
-                            <div class="slider-item"></div>
-                        </div>
-                        <div class="slide">
-                            <div class="slider-child slider-panorama"></div>
-                            <div class="slider-item"></div>
-                        </div>
-                    </div>
+                        </div> 
+                </div>
+
+                   <!--<input class="section-country__input" type="range" id="range" min="1" value="1" step="1" />
+                    <div id="slider">
+                        
+                    </div>--> 
                     
                 </div>
             </section>
             <section class="section-city"></section>
-            <section class="section-plan"></section>
-            <section class="section-about"></section>
+            <section class="section-plan">
+                <h2 class="title">Генплан</h2>
+                <p>На генплане вы можете посмотреть территорию покупки. В поселке все предусмотрено.<br>Здесь проведены необходимые коммуникации.Это место влюбляет в себя.</p>
+                <div class="slider-plan">
+                    <div><img src="../img/plan.png" alt=""></div>
+                    <div><img src="../img/plan.png" alt=""></div>
+                </div>
+            </section>
+            <section class="section-about">
+                <div class="wrapper">
+                    <h2 class="title">О компании</h2>
+                    <p>Профессиональный оператор рынка элитной недвижимости с 2008 года.<br>HOMEFOR – это сочетание репутации, многолетнего опыта и высокого уровня сервиса.<br>Компания заслужила доверие и признание профессиональных участников рынка</p>
+                    <div class="section-about-item">
+                        <ul class="section-about-list">
+                            <li class="section-about-list__item section-about-list__experience"><span></span>Большой опыт<br>в строительстве</li>
+                            <li class="section-about-list__item section-about-list__accessible"><span></span>Доступные цены</li>
+                            <li class="section-about-list__item section-about-list__timing"><span></span>Оперативные<br>сроки работы</li>
+                            <li class="section-about-list__item section-about-list__quality"><span></span>Качественные<br>материалы</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
             <section class="section-news"></section>
             
         </main>
@@ -122,11 +151,12 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>  
+        <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> 
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> 
 
         <script>
-            var firstSlider = document.getElementById("myRange");
-            var output = document.getElementById("demo");
+            var firstSlider = document.getElementById("myRange1");
+            var output = document.getElementById("demo1");
             output.innerHTML = firstSlider.value; // Display the default slider value
 
             // Update the current slider value (each time you drag the slider handle)
@@ -134,8 +164,8 @@
                 output.innerHTML = this.value;
             }
 
-            var secondSlider = document.getElementById("myRange");
-            var output = document.getElementById("demo");
+            var secondSlider = document.getElementById("myRange2");
+            var output = document.getElementById("demo2");
             output.innerHTML = secondSlider.value; // Display the default slider value
 
             // Update the current slider value (each time you drag the slider handle)
@@ -145,25 +175,36 @@
         </script>
 
         <script>
-            $('#slider').on('init reInit',function(event,slick){
-            var amount = slick.slideCount;
-            $('#range').attr('max',amount);
-            })
-
-            $('#slider').on('afterChange',function(e,slick,currentSlide){
-            $('#range').val(currentSlide+1);
-            })
-
-            $('#range').on('input change',function(){
-            $('#slider').slick('slickGoTo',this.value-1);
+            $(document).ready(function() {
+                var $slider = $('.slider');
+                var $progressBar = $('.progress');
+                var $progressBarLabel = $( '.slider__label' );
+                
+                $slider.on('beforeChange', function(event, slick, currentSlide, nextSlide) {   
+                    var calc = ( (nextSlide) / (slick.slideCount-1) ) * 100;
+                    
+                    $progressBar
+                    .css('background-size', calc + '% 100%')
+                    .attr('aria-valuenow', calc );
+                    
+                    $progressBarLabel.text( calc + '% completed' );
+                });
+                
+                $slider.slick({
+                    slidesToShow: 3,
+                    slidesToScroll: 1,
+                    speed: 400,
+                    arrows:true
+                });  
             });
-
-            $('#slider').slick({
-            slidesToShow:3,
-            arrows:false,
-            dots:false
-            })
         </script>
+        <script>
+            $('.slider-plan').slick({
+                arrows:true
+            }
+            );
+        </script>
+
         <script src="js/main.js"></script>
         <script src="js/vendor.js"></script>
     </body>
