--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -1,7 +1,7 @@
 .header {
     justify-content: space-between;
     align-items: center;
-    padding-top: 40px;
+    padding-top: 0;
     padding-bottom: 46px;
     background-image: url(../../../img/image-main.png);
     min-height: 850px;
@@ -25,7 +25,7 @@
         justify-content: space-between;
         align-items: center;
         max-width: 1440px;
-        margin: 0 auto;
+        margin: 0 109px 0 auto;
         padding-left: 15px;
         padding-right: 15px;
         &__place {
@@ -42,30 +42,38 @@
                 height: 21px;
             }
         }
+        &:last-child {
+            margin-right: 7px;
+            margin-left: 0;
+        }
     }
     &__title {
         font-size: $font-size-h1;
         font-weight: 700;
         color: $bg-color;
+        margin-bottom: 32px;
     }
     &__text {
         font-size: $base-font-size;
         font-weight: 500;
         color: $bg-color;
+        margin-bottom: 65px;
     }
     &__btn {
-    background-color: $bg-color;
-    color: $color-primary;
-    text-transform: uppercase;
-    text-decoration: none;
-    border-radius: none;
-    padding: 1.3rem 3.1rem;
-    letter-spacing: 0.3rem;
-    transition: 0.2s ease;
-    &:hover {
-        background-color: $color-secondary;
-        color: $bg-color;
-    }
+        font-size: $font-size-btn;
+        font-weight: 700;
+        background-color: $bg-color;
+        color: $color-primary;
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 1.5rem 3.2rem;
+        letter-spacing: 0.2rem;
+        transition: 0.2s ease;
+        border: none;
+        &:hover {
+            background-color: $color-secondary;
+            color: $bg-color;
+        }
 }
 }
 
@@ -87,6 +95,11 @@
             color: $color-secondary;
         }
     }
+    &-icon {
+        &:last-child {
+            margin-left: 68px;
+        }
+    }
 }
 
 .logo {
@@ -103,6 +116,8 @@
     background-color: transparent;
     border: none;
     margin-left: 30px;
+    margin-right: 74px;
+    margin-top: 16px;
     &-line {
         width: 40px;
         height: 1px;
