--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -144,6 +144,12 @@
         &:nth-child(2) {
             width: 25px;
         }
+        &:hover {
+            background-color: $color-secondary;
+            width: 40px;
+            height: 1px;
+            margin: 8px 0;
+        }
     }
 }
 
