--- a/src/views/index.html
+++ b/src/views/index.html
@@ -346,7 +346,7 @@
             <section class="section-about">
                 <div class="wrapper">
                     <h2 class="title">О компании</h2>
-                    <p>Профессиональный оператор рынка элитной недвижимости с 2008 года.<br>HOMEFOR – это сочетание репутации, многолетнего опыта и высокого уровня сервиса.<br>Компания заслужила доверие и признание профессиональных участников рынка</p>
+                    <p class="section-about-description">Профессиональный оператор рынка элитной недвижимости с 2008 года.<br>HOMEFOR – это сочетание репутации, многолетнего опыта и высокого уровня сервиса.<br>Компания заслужила доверие и признание профессиональных участников рынка</p>
                     <div class="section-about-item">
                         <ul class="section-about-list">
                             <li class="section-about-list__item section-about-list__experience"><span></span>Большой опыт<br>в строительстве</li>
@@ -482,7 +482,7 @@
                     }
                     },
                     {
-                    breakpoint: 320,
+                    breakpoint: 321,
                     settings: {
                         slidesToShow: 1,
                         slidesToScroll: 1,
